# NullCV

./: .env.example  Dockerfile  LICENSE  README.md  init_project.sh  pyproject.toml
docs/: DYSTOPIC_PITFALLS.md  PHILOSOPHY.md  PROTECTIVE_GUIDELINESS.md
nullcv/: __main__.py
nullcv/api/: main.py
nullcv/api/dependencies/: services.py
nullcv/api/endpoints/: __init__.py
nullcv/api/middleware/: logging.py
nullcv/blockchain/contracts/: escrow_abi.json
nullcv/core/: events.py
nullcv/core/config/: __init__.py  base.py  encryption.py  providers.py
nullcv/db/: __init__.py  engine.py  ledger.py  mixins.py  secure_db.py  session.py  sqlite.py
nullcv/db/migrations/: env.py
nullcv/db/repositories/: __init__.py  users.py
nullcv/db/session/: __init__.py
nullcv/federation/: __init__.py
nullcv/federation/protocol/: __init__.py
nullcv/identity/: crypto.py
nullcv/ipfs/: __init__.py
nullcv/models/entities/: __init__.py
nullcv/models/enums/: __init__.py
nullcv/reputation/algorithms/: __init__.py
nullcv/reputation/proof/: __init__.py
nullcv/services/disputes/: __init__.py
nullcv/utils/validators/: __init__.py
scripts/: test_db.py
src/: __init__.py  __main__.py
src/api/dependencies/: __init__.py
src/api/endpoints/: users.py
src/blockchain/contracts/: __init__.py
src/blockchain/escrow/: __init__.py  contract.py
src/core/: events.py
src/federation/activitypub/: __init__.py
src/identity/attestation/: __init__.py
src/ipfs/: storage.py
src/ipfs/client/: __init__.py
src/reputation/: __init__.py
src/services/: identity.py
(+16 files in other folders)
